--- a/_posts/2015-03-15-title.markdown
+++ b/_posts/2015-03-15-title.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  a post with formatting and links
+title:  A Post with Formatting and Links
 date:   2015-03-15 16:40:16
 description: march & april, looking forward to summer
 ---
